# vision

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  QUICKSTART.md  README.md  build.rs  setup-deps.sh
config/: default_config.toml
src/: app.rs  lib.rs  main.rs
src/alerts/: manager.rs  mod.rs
src/collectors/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  power.rs  process.rs  temperature.rs
src/models/: config.rs  metrics.rs  mod.rs  state.rs
src/storage/: database.rs  export.rs  mod.rs
src/ui/: alerts.rs  dashboard.rs  disk_view.rs  gpu_view.rs  mod.rs  network_view.rs  process_view.rs  settings.rs  theme.rs
src/utils/: formatting.rs  mod.rs  system.rs
