[package]
name = "system_vision"
version = "0.1.0"
edition = "2021"
authors = ["SystemVision Team"]
description = "Advanced Linux system monitoring tool with real-time metrics and historical data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/system_vision"
keywords = ["system-monitor", "linux", "performance", "monitoring"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
# GUI Framework
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = [
    "glow",           # OpenGL rendering
    "persistence",    # Save window state
] }
egui_plot = "0.27"   # Plotting library for egui
egui_extras = "0.27"  # Extra widgets including tables

# System Monitoring
sysinfo = "0.30"     # Cross-platform system information
procfs = "0.16"      # Linux /proc filesystem
libc = "0.2"         # C library bindings

# Hardware Monitoring
nvml-wrapper = { version = "0.10", optional = true }  # NVIDIA GPU
sensors = { version = "0.2", optional = true }        # lm-sensors

# Network Monitoring
pnet = "0.34"        # Network interface information

# Data Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Time & Date
chrono = { version = "0.4", features = ["serde"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5.0"  # Standard directory paths

# System Tray
tray-icon = "0.14"

# Notifications
notify-rust = "4.10"

# Async Runtime
tokio = { version = "1.37", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
num_cpus = "1.16"    # CPU count detection

[dev-dependencies]
criterion = "0.5"    # Benchmarking
tempfile = "3.10"    # Temporary files for tests

[features]
default = ["gpu-nvidia", "sensors"]
gpu-nvidia = ["nvml-wrapper"]
sensors = ["dep:sensors"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
